--- a/client/overwatch/public/index.html
+++ b/client/overwatch/public/index.html
@@ -10,6 +10,7 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/ana-final.ico">
+    <link rel="stylesheet" href="App/animations.css">
    
 
 <!--  -->
